--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-contrib-less": "~0.10.0",
     "grunt-contrib-coffee": "~0.10.1",
     "bcrypt": "^0.7.8",
-    "sails-mongo": "~0.10.0-rc5"
+    "sails-mongo": "~0.10.0-rc5",
+    "dateformat": "~1.0.8-1.2.3"
   },
   "scripts": {
     "start": "node app.js",
