--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-coffee": "~0.10.1",
     "bcrypt": "^0.7.8",
     "sails-mongo": "~0.10.0-rc5",
+    "connect-redis": "~2.0.0",
     "dateformat": "~1.0.8-1.2.3"
   },
   "scripts": {
